2009-02-10 John Wu <John.Wu at ACM.org>
	* src/qExpr.cpp: use an integer array to sort the incoming values
	instead of a std::set (at the suggestion of Alesandro Capucci)
	* examples/ibis.cpp, doc/ibisCommandLine.html: change the print
	out to indicate that tableSelect is producing another table as
	output and the "count(*)" will produce a table of one row and one
	column, update the documentation about the ibis command line to
	reflect this fact (not a new feature but a clarification of
	behavior)
	* src/category.cpp: the computation to carry the leftover bytes in
	function startPositions had an extra accumulation of offset, a
	problem first reported by Andrey Kolchanov

2009-02-06 John Wu <John.Wu at ACM.org>
	* src/fileManager.cpp: add calls to unload in mapFile and doRead
	after they fail for the first time (to address a problem reported
	by Alessandro Capucci)
	* tests/Makefile.am: remove - from test 3 of check-tcapi, the sh
	on a BSD machine does not like it

2009-02-05 John Wu <John.Wu at ACM.org>
	* examples/ibis.cpp: add indications of total number of hits in
	addition to how many are printed in function tableSelect (to
	address a problem encountered by Alessandro Capucci)
	* configure.ac: if --enable-xopt is specified by nothing is
	specified for debug, use -O3, which is more widely supported than
	-O5

2009-02-04 John Wu <John.Wu at ACM.org>
	* src/column.cpp, src/category.cpp: updated documentations while
	looking for clues to the problem reported by Alessandro Capucci
	<alessandro at totalwire.it>

2009-02-03 John Wu <John.Wu at ACM.org>
	* src/table.h: move two inlined functions ibis::table::groupby and
	ibis::table::orderby to mensa.cpp to make the header file more
	self contained.  Those two function requires
	ibis::table::parseNames, which is already in mensa.cpp, change
	parseNames to be class function
	* src/whereLexer.ll: change a number sequence to require at least
	three numbers, change {WS}* after the first string in the